# simple-gui

./: .gitignore  CMakeLists.txt  LICENSE  README.md  simple-gui.sln
sanbox/: sanbox.vcxproj
sanbox/src/: main.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
simple-gui/: CMakeLists.txt  simple-gui.vcxproj  simple-gui.vcxproj.filters
simple-gui/include/: deleter.hpp  event.hpp  extended_functions.hpp  font.hpp  framerate.hpp  gui_manager.hpp  logger.hpp  math.hpp  renderer.hpp  signal.hpp  simple_gui.hpp  style.hpp  text.hpp  texture.hpp  timer.hpp  window.hpp
simple-gui/include/component/: base_component.hpp  button.hpp  check_box.hpp  combo_box.hpp  common.hpp  component.hpp  draggable_panel.hpp  label.hpp  line_edit.hpp  progress_bar.hpp  root_component.hpp  scroll_panel.hpp  scrollbar.hpp  slider.hpp  texture_rect.hpp
simple-gui/include/component/common/: caret.hpp  range.hpp  types.hpp  utils.hpp
simple-gui/include/component/layout/: anchor_point_layout.hpp  box_layout.hpp  layout.hpp  split_layout.hpp
simple-gui/include/refl/: function_traits.hpp  type.hpp  variable_traits.hpp
simple-gui/include/ui_loader/: component_register.hpp  type_convert.hpp  ui_file_parser.hpp
simple-gui/src/: deleter.cpp  event.cpp  extended_functions.cpp  font.cpp  framerate.cpp  gui_manager.cpp  logger.cpp  math.cpp  renderer.cpp  style.cpp  text.cpp  texture.cpp  timer.cpp  window.cpp
simple-gui/src/component/: base_component.cpp  button.cpp  check_box.cpp  combo_box.cpp  common.cpp  draggable_panel.cpp  label.cpp  line_edit.cpp  progress_bar.cpp  root_component.cpp  scroll_panel.cpp  scrollbar.cpp  slider.cpp  texture_rect.cpp
simple-gui/src/component/common/: caret.cpp  range.cpp
simple-gui/src/component/layout/: anchor_point_layout.cpp  box_layout.cpp  split_layout.cpp
simple-gui/src/ui_loader/: component_register.cpp  ui_file_parser.cpp
